--- a/index.html
+++ b/index.html
@@ -1,83 +1,93 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>VisualSec Miskolc</title>
-<style>
-  body {
-    margin: 0; padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #111; /* sötét háttér */
-    color: white; /* alapértelmezett fehér szöveg */
-  }
-  header {
-    background-color: #004080;
-    padding: 20px;
-    text-align: center;
-  }
-  header h1 {
-    margin: 0;
-    font-size: 2rem;
-    color: white;
-  }
-  header p {
-    margin: 5px 0 0;
-    font-size: 1.2rem;
-    color: white;
-  }
-  nav {
-    background-color: #0066cc;
-    display: flex;
-    justify-content: center;
-  }
-  nav button {
-    background: none;
-    border: none;
-    color: white;
-    padding: 15px 25px;
-    cursor: pointer;
-    font-size: 1.1rem;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  nav button:hover,
-  nav button.active {
-    background-color: #3399ff;
-    color: #111;
-  }
-  main {
-    max-width: 900px;
-    margin: 30px auto;
-    padding: 20px;
-    background-color: #222;
-    border-radius: 8px;
-  }
-  section {
-    display: none;
-  }
-  section.active {
-    display: block;
-  }
-  ul {
-    list-style-type: none;
-    padding-left: 0;
-  }
-  ul li {
-    padding: 8px 0;
-    font-size: 1.1rem;
-  }
-  a {
-    color: #66ccff;
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
-  img {
-    max-width: 100%;
-    border-radius: 10px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>VisualSec Miskolc</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4962D7X8HB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4962D7X8HB');
+  </script>
+
+  <style>
+    body {
+      margin: 0; padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: white;
+    }
+    header {
+      background-color: #004080;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+      color: white;
+    }
+    header p {
+      margin: 5px 0 0;
+      font-size: 1.2rem;
+      color: white;
+    }
+    nav {
+      background-color: #0066cc;
+      display: flex;
+      justify-content: center;
+    }
+    nav button {
+      background: none;
+      border: none;
+      color: white;
+      padding: 15px 25px;
+      cursor: pointer;
+      font-size: 1.1rem;
+      transition: background-color 0.3s, color 0.3s;
+    }
+    nav button:hover,
+    nav button.active {
+      background-color: #3399ff;
+      color: #111;
+    }
+    main {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #222;
+      border-radius: 8px;
+    }
+    section {
+      display: none;
+    }
+    section.active {
+      display: block;
+    }
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+    ul li {
+      padding: 8px 0;
+      font-size: 1.1rem;
+    }
+    a {
+      color: #66ccff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 <body>
 
@@ -129,11 +139,9 @@
 
   buttons.forEach(button => {
     button.addEventListener('click', () => {
-      // aktív gomb jelölése
       buttons.forEach(btn => btn.classList.remove('active'));
       button.classList.add('active');
 
-      // tartalomváltás: csak a kijelölt szekció legyen aktív
       const targetId = button.getAttribute('data-target');
       sections.forEach(section => {
         if (section.id === targetId) {
